--- a/frontend/src/assets/styles/index.css
+++ b/frontend/src/assets/styles/index.css
@@ -51,3 +51,16 @@ table th {
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
 }
+
+.bg-custom {
+  background-color: #A72F30;
+  /* background-color: #F3BF43; */
+}
+
+
+
+
+
+
+
+
